@@ -1,4 +1,4 @@
 DIST DBIx-Safe-1.2.5.tar.gz 16958 SHA256 73279fd98b20034d3735dee67e2b89ac63d55449c3c64dd1a7ba0df10fbe0acf SHA512 ce694bd9f6078e7ec7ac04fe57da96ddecebdbe312c87047ee71384c8233ae160078518b876819c6f12ad29d6d27c30ba2975a48db34b7cb5d79ff71f6a79712 WHIRLPOOL c04d2fb1163e49bb62a37ee78de5c195eeb19d58924b22ca93f6701ebb2291aef3373f8f666e0d5328e8cfb556bade2c1d8b0dbdaadcdb045131add1bf3f3895
-EBUILD DBIx-Safe-1.2.5.ebuild 468 SHA256 72817ba19f9dcc38cc36bc39cfbf303555659cce4ac91e885cd1f5d56bb41974 SHA512 e6ed63a5862b6d43c5e73886ef780d5a7dff9ef8f4f608ce3304c6dfbf972259f0bf5199f3cbfc36e71ef365be67e08d35363308ab23a6d336a5165b23eaf025 WHIRLPOOL 45311bf703441ee97d3c13aa03df46378794cae71b20e4c8ab156481588658de891ddcbd6e543ff18ac189e830ecd77991d930dd6385a869475c86ae464baef4
-MISC ChangeLog 365 SHA256 e76fd94cce2e6ef3d7338042ae77a6b60c441ce3f673286fd7ea1d834db50542 SHA512 d44009514f541f8a5de7b10fffb8f0f341999fa86bd021ccf022b4699ab1dd6bbeed8771713476761ade60b3327ff5e01256be393f4bfb81fd02449fffe92933 WHIRLPOOL f5e8febab757b9b88149ec1831ff24803cdea44fd7baec4e2da79c52c59bb8be6ea9c8edd8c61800d30ec67586bc909577f2a0e8ec19a81c66fc4f5102547bcc
+EBUILD DBIx-Safe-1.2.5.ebuild 481 SHA256 43700f906c6a97eaa2aa8bce6dd60846cd7314991bee5c424a7c63f779e0a7a1 SHA512 b6621440347af307f7f9c80461ad5988122890f18589342056abba46e6a1e47bc3b0b6d835434704badb0685377ae9e48d05a6b84cacd90b92bbcf4dba197b30 WHIRLPOOL c2b2aea6fac8edb6bdf890041915bd1bf8ce5b38a106d51365547ad45dcc71cf98124ffc7ade355ddd2b13b56ca1b1e6795c70aef2b3e416ed00c8e31f57c7c8
+MISC ChangeLog 473 SHA256 23898d0ee6be55bcc4992ec74ab2dfcf4367a580b8b6a390399dc361fe35b623 SHA512 0ac6fc24530873d90543c22582799b8c43a1e65db74ea73d88ef7f8f765638f10d78dbe3ff630b3a97e9fd39b432f5d2cc44a5d8ca11c9451a28e870d2c6f3e2 WHIRLPOOL 4610e92bb0b555adae55ed680056b23a0d1c8069a67c810371a6486e365972a71162c3c4adb7ec05014a52f8ae9fff6a9621e70b8a9a0d621be8703fd1528012
 MISC metadata.xml 159 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd SHA512 5ff7b5593ea8976b44c7d63c7cd649f56d649b0d7c4fa5a16bf71ecdf36e40afa8fd9c28df0b8f0c7f9577c47b6ee63d3330f9304d545b46657d6a5f2bfa124a WHIRLPOOL 7ca7b971bad6145bdf2215f73d158f190984644554e8f32132c57c22f1209a5684060661c02e181c135c34c8729d491090ff6d4b23614198e19b9e2deda35a0a
