@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX 47_mod_dav_svn.conf 422 SHA256 bdb10203ae3154da723655b07118f630ef1e83ec38a79e31a53e436e0c071d27 SHA512 05608aa7abca0ec55015232077db928453c92ccf8b595dd843ba13ed39703e01dcbe298c4ff57c638376679be9fea4b409e98953915b86dc6954e3e0de31b23d WHIRLPOOL 05f1048e41c9c59718fc794ae53de532565447186a2cef45a222bee3d45071976037cc2aa3d90b27df1c02c01ce262c7b8030c4ad021cd597f277b8b48c7d976
 AUX 70svn-gentoo.el 443 SHA256 23aa9effa5aea7ae73d14ae4df1a9269135137a5e483b4ff2a501dc130d7d1be SHA512 ab105533569ec81631491da4cd29488e77ae5713b5a2190afe1576e6434202a0c36fce7674cdf17a3e1e58650efba8915fb7e31c686def3701ef82803ecf8bea WHIRLPOOL 4f699ca38a1659ac2129f36de37ddd830d026520c1bf34562181ceb4763a38362cc3df516c3077ddbd66f36973d0c82f2d51d3a4657ba0af3722e61b29b4a53f
@@ -29,15 +29,13 @@ EBUILD subversion-1.7.1.ebuild 14825 SHA256 e76693d51738bfca2e8a39d3b8e53a4d5011
 EBUILD subversion-1.7.2.ebuild 14913 SHA256 8162c5df5d310a74a29429fa984272e868d0f57c7c1cf292c5801ab1d1f8003a SHA512 29fb78e37fee60fd00a09aef1e35bd60d51fd38a728598e7cc72595f1a7cb1543bb37882758ee0b427df3cc2f831358838868a03a6db4b0accc52f685183e554 WHIRLPOOL 86a6f088300fc36bd673ee309d8535a4caf0847d8660c4e67c5ff7282704425aff1cd38664f3d0e7d28e8e858dcdc3204141ea04445460c765cd9b87eaca8c94
 EBUILD subversion-1.7.4.ebuild 15600 SHA256 158ec0cb4a85f7a345afe5341a7ee016c5f1205b19b9bf7ab7b869e2b826d8a0 SHA512 ec4ba26cdb29b3bc4b7aae43ee4809c78b28d83d2296cc147d4973647316efc90e26191d36d9c59d928766342dc1d823eac92ca8a2cc5c9e4da1a8d1625e1d5c WHIRLPOOL bbcdf40252573d22f6f159353adc1c6035a21174f0080f7501d051c0c2bda5de048588c7ac88e2cbec2a3f7e9e075680c69a105c957635de15a2f0d6cfa1b064
 EBUILD subversion-1.7.5.ebuild 15600 SHA256 dbbe674c0ff760e2f434b7e440bf9f1f0c762fdadf0d7953415f9667f34ba03a SHA512 6188ead1aa86e7b18d4219c471da2992ef573825f93a4b5b87d66dda553a0aaf22366dc117c1c64a673501d0f3891282877e4c701d029a402b0b345f6c0d44fa WHIRLPOOL 1d6a32c92f57b1e20a8f01de78bd14416fb6ea5053d9646e856a6d5d9ba5fc0abd064cafa3d8c751498f0a0f7977665ffea65e66655e0a5bc9148658afa5e6df
-EBUILD subversion-1.7.6.ebuild 15696 SHA256 ca8bba78fbb86603766d3dc7826120e2ef272fb153acbb2d3b6b31498c406c13 SHA512 4727f60930966ed0452a126ab221b36054262dee7314b0fc6e6838452e4ec087af592028b95f6ac5f846d3d9f5554500f05fdf5b4b613d4776e08415ec9740cb WHIRLPOOL cd2eb9ee0ba6abfdecf41b2a997fc3d9c2a99216594755d6927ad5b2db846cdea88101e4286a43b7afc80e1b69cbef1a0f51949cc51f30c46dfc99fe234f6d42
-MISC ChangeLog 85901 SHA256 d62b03c4c2290742c08a71a8375bf306128442f5c4152fe18abd4e96532b7db7 SHA512 e2e3d015a9ed5231cce3dd690710e94a0e43fe975e7944e1a9964fa04f024c7170d57f44328ceefc16fcb18d4caedf990a214fb32bd575db59398f4e4e02ce48 WHIRLPOOL e202fc8d276f86e2d00afda45cba5d36af7eb2985c3a73bfa0dbe9573be516067059a36efec6f82b49f52a0805a08111ce9814bcfd8d40cda47a03dbb9d71d9e
+EBUILD subversion-1.7.6.ebuild 15773 SHA256 bae5d19896c74ce0cef3d1df2e308a537c1b11ad616e8386adeb92007ca8bfc7 SHA512 f606f372c843b92a2040a7ec8780d329a15d7ff0a1d613251f631388c6a31a61e3ec18d02c173986bd507ab8bf601cddbfaa63fe6db6baaeb48791bc43a15194 WHIRLPOOL 234e54bad2d5845290cd2d98725c4ba452603ed82b6496d2d2bf814000cb3ac22fd113f58ab93d88c616d66e6ab5a6ae405f79adc4818238fd2447e89d890000
+MISC ChangeLog 86018 SHA256 1af1e04e57ef502c908863651273f0affed05431019485849c8ae90e28121016 SHA512 bbe9697dfbdd9a7809e083bb2d65c275919a6c99ada0548f55eacc31db4db019a2c84ed3021f8172be0b0532a3821be7a94e2bd1fed22278807055ef2611a989 WHIRLPOOL 8abad1aad7d4102be87fd30fff0bdd33738cc2f79de93019f886e51dccba6b391809523cfb9e91d9e48721cbf81830af462667dbaccd003d9482df751baadcf9
 MISC metadata.xml 628 SHA256 b3715692f57550cecbca66df385d0cc48ef3d6707b4832b88add2f689c35969d SHA512 2c1f375df0efee06e088db3c7c19b96e23b615053aaaa98bc45b5d4945a39a3c21a868c80b938be88ff840824b2e8aebe9379633f106d2cfead4b3fd74cff927 WHIRLPOOL 1387297f9b5b7feb6e90cbda59b0cd61519d0395ec94fb315d2ec97adb66c37a9aa59736d968920eab7229342105846805458b8789dc84ef9ecbd40e452c02c8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.19 (SunOS)
 
-iJwEAQECAAYFAlA1QhEACgkQG7kqcTWJkGdULAP/Z1z6e/bE/Lzm4cxxSEP2w6da
-SJc6LTm38cMuicxH0CcRcby565Xld3BCGMpEQ3TKv05SLixXlQGchyz7IJzDkHG7
-uOv2LTN/UBlafOVuOo/hBKkfiok6y9lQ3XD+KBuIBQP9FVXpaV07hG60fl3YzdU3
-+dfG6ykyQJlW46CijPE=
-=A4fU
+iEYEAREIAAYFAlBFBF8ACgkQX3X2B8XHTokgowCgoou6eISk3Nr7BPO0zyprco51
+kkoAnR98IEa5OsHuaIUPNPPDD9Nta6ey
+=Xxw2
 -----END PGP SIGNATURE-----
