@@ -1,18 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST mk-livestatus-1.1.10p1.tar.gz 326280 RMD160 67878461d6e3b5368c3ae578e54b8c6b51dc5c12 SHA1 753b893dd39f4274374b7e77db64e89db6877753 SHA256 7e68f85f472ae707dd7bf74c7e2b3a8d8703e9731e3abc0558b82119660985b6
-DIST mk-livestatus-1.1.8.tar.gz 323754 RMD160 af01ef4fdd40eb9f5db7a67bfdf0992cc83e4aab SHA1 600556440a8339dce7292ec847cc595e5082b800 SHA256 b9f3449664625a5b23a24dfd015f2ad1e3b5829d45a3b9502051f9121c0da17d
-EBUILD mk-livestatus-1.1.10_p1.ebuild 2240 RMD160 2f4065e818d626b9157f2699e9e68db16ee8cd19 SHA1 24a4a4dcfca4ec1a5d1a23f76f3034e81cad90d2 SHA256 7dc9f9423b2355588468dccf28f12d707017f3470c429df62717a4003cb358ff
-EBUILD mk-livestatus-1.1.8.ebuild 2167 RMD160 b446901fac5d8822b862926402282ed83bea147f SHA1 54fa2cf845eb06f444ada984a4ac6bb8ef11fa23 SHA256 c9005f84738428e1950a5d1fb0a388c31dec01e7e366df38c04e7e9c11849100
-MISC ChangeLog 720 RMD160 15cf416c3e343bf3610a4e7118a3e002557c8705 SHA1 57d22e5117f8f9ccb564830f4d2cfb835b0086bd SHA256 c7e2cb68e958ca003ba414a44042fc2ab4182c004d07ba7bc03c67ea865f0347
-MISC metadata.xml 235 RMD160 0716826a6dd51819a2d989fb883ad83c265e9818 SHA1 e37ad80a2c9aca6ae43658946bdd64a21235a600 SHA256 b8869c93feb961be451885770fc43a86d606a5076b21842efe9046773be72991
+AUX gcc-4.7-compile.patch 324 SHA256 4c93f8cffdeb79ae460db7d15922228a3a56a3bfa318ed7f0aeff7fb5383cef3 SHA512 e60a837336cccd6aa37a7e634d71ff34dc6da43ebc71620db9cc3fd708309f52bdad4bf80728330c5ef01f2330605ba3170ab3b6720aa49c2670238ccd6da3db WHIRLPOOL 2a9b894e6350612ef0066cf7604fba881c13dc7a04d73e8540e82da8fa17bb3f3425c6490ac2693364bc16fbbe6ad3be9654f1deb7c071d5856045ebcce2356e
+DIST mk-livestatus-1.1.10p1.tar.gz 326280 SHA256 7e68f85f472ae707dd7bf74c7e2b3a8d8703e9731e3abc0558b82119660985b6 SHA512 e10d4af1e25f5a410e8ab79120c445e4269c35b9859970a42259d47ca8460c685648bf153036efaa61fc4679c06aaf70eaa6e150fa6f28fde406d76df21aa7ba WHIRLPOOL 973359b0e30110342c3fb5fb1b6b349cdbafdc1735f491d522c172c4abfec89834165e5d934cbeb7f51eee031ff1988c2e8bf1b665300158072891664bd3916f
+DIST mk-livestatus-1.1.8.tar.gz 323754 SHA256 b9f3449664625a5b23a24dfd015f2ad1e3b5829d45a3b9502051f9121c0da17d
+DIST mk-livestatus-1.2.0p2.tar.gz 371580 SHA256 d4f6918fe64ae09774e059096814ccba9fcba984179504fa5fc7a8b9b288dfba SHA512 d27f822a4b060c29c37e059e5d8f913ef242bfdb96a22677521de9babb62b9b3517c8b0ca409c02f9ee27e319d1229a9ca305d039092c5eb030479b7123ef00d WHIRLPOOL e822ddba2ad0d4c56f7ce079a6bb78671637c808d28fb73bbafc83c46a1fccc3b37f078f12da36ed867475cbeaebd4fd4c0a0dc137a67ed96397f0ce5aadf8a8
+EBUILD mk-livestatus-1.1.10_p1.ebuild 2292 SHA256 1371efe5519d01a2e90781a2b7e7ea551b384996359220427da58d66ae3f0ecb SHA512 88553ba894e104be83d775fb8620a9d923279f99a75f7ee0ae04bbd48b848b119e5dae822e1bc45777772daaa09fe46fbc79bf519702f5d522ee77f1c092953b WHIRLPOOL 7a6b39e40051859641a4a58136bfacfc386b8f8b4f5b6d4659c7f32dc3441c7524bc231ded4c4d989598abb364518836b27d4f1b8e62fd066010447aa595b90a
+EBUILD mk-livestatus-1.1.8.ebuild 2167 SHA256 c9005f84738428e1950a5d1fb0a388c31dec01e7e366df38c04e7e9c11849100 SHA512 e3fce6b39acce0860d0c24767ca6be1a9ae5e581c4516f3d6f74138ae62389b596f17271cc25572df31c02e1f808679be0570c8482145560f20a1b4aa91022b1 WHIRLPOOL d04e0ccd25f7b63767ad33c38ce3242c50091445ba2081b507ab76f02d758dce3edc627f97ba09d1ad4ab97c9e32ec5d5b5e17d2a62db5d462a90ba88953f5ec
+EBUILD mk-livestatus-1.2.0_p2.ebuild 2422 SHA256 e054034a1cd05b9d08f1e8dbb890430cf8ae3773e531055c91bf81ff1b4ae958 SHA512 9cfa13ca24608ba88d9479e0395477f8f1478ffd30f87ac13eb569807d1eef0d4e48355746238be702b82d5c812e0aa9075ef45b35a0483dca76e0e4ca340055 WHIRLPOOL 70a6f6553689606b5095ea8feb6a4366a0370071d425542357c455fc79ed2181f7fd65c919a5ffdf5e1c0baee9c0483b238274260c2bcaf80c32050b2774a069
+MISC ChangeLog 1040 SHA256 f60a6759b427f136e3cfcb20e6021824ffea1420d90e2fb0bf1f8883f34798b6 SHA512 8875796cd06af114536b288e3cc7e015e0585d3765e1b3ee4e2a822cd5be7ea991679d29400378c0c3f6c21f5c8427b6171737d771d4f76d57763297d2f3f6e6 WHIRLPOOL f21db5b00e93fd956be1bbeeb8904006ea6184ee9be3ec6b733e0b1bc1d5d50925a4b8e345a665bf08669fc60e3a3fab842c778074c0ae388d1b4fdb8e7865d8
+MISC metadata.xml 235 SHA256 b8869c93feb961be451885770fc43a86d606a5076b21842efe9046773be72991 SHA512 0f45c3328380643ee0ef6bccc13ca318f26525fbcf9669527745a51e5c910532f1b5aef64247f5cf019a7515df659909427a76e3691edb878f5c31b172d9b4e1 WHIRLPOOL 0b2b4c1e5917851d05a390f05eaad3cd094439b542857e42fc6c4183cf65664b2f8b153d2d11b465494523925bcaf1215c4d485a63f4c9443df769e05c0a9e9d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAk59p+kACgkQfXuS5UK5QB2w7AQArL4KYtaq7oReo6JG2IW78VjY
-4zz8Ma0wdlGOUZvBNsXEYtxySDWpjG759Yw1JVRo5O6TVQHyG7P0jtzSWCxo6ouC
-w9VXmtP8Tkr6WDz+rsNVjkMFv8pX6QUXUEj1xTrdOBJqMEIbg2GL9Pvm7Ex65GU9
-aExaHQRrCbSkDgFUqLE=
-=I0ZD
+iQEcBAEBCAAGBQJQRQGHAAoJEMOx0zmdw4Z1MvYH/ig5D1CIWGFChGTJ/W9CO0Ea
+NJY3+iY9LtomOTaPE5gvbaWApA1HjNpsUe/+F5SFzd4OLJI6qs8Ue+TBVIygNG8G
+revqfy4l4l0y5xAa7eYf9PAPPVCgrYmaloLl0uDd3C1lYso4FPt8+JkIZ1p9AHv4
+lm04AMBTyXF0/PjTa7VDpUgslV472Gp+AOUDJSpq+ln0ArmlBzp6TVnC29b4MM+3
+T/DCyg/EzrW80QhNVZ79uGV0qVJ96D/OM2ql2X0SjnNdXA/bMn+BI62QLtjKQcIr
+g5vcNQYscFA7PGBmwfhlXhn94Mwx59IIjMBJ9vd0edYydYjhURkQaOdKvyuZ6x8=
+=y9S2
 -----END PGP SIGNATURE-----
