@@ -1,6 +1,9 @@
 # ChangeLog for dev-vcs/subversion
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/subversion/ChangeLog,v 1.82 2012/08/22 20:33:10 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/subversion/ChangeLog,v 1.83 2012/09/03 19:25:39 grobian Exp $
+
+  03 Sep 2012; Fabian Groffen <grobian@gentoo.org> subversion-1.7.6.ebuild:
+  Fix linking on Solaris with USE=nls
 
   22 Aug 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   subversion-1.7.6.ebuild, +files/subversion-1.7.6-kwallet.patch:
