@@ -1,6 +1,16 @@
 # ChangeLog for net-analyzer/mk-livestatus
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/mk-livestatus/ChangeLog,v 1.3 2011/04/27 13:50:15 idl0r Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/mk-livestatus/ChangeLog,v 1.5 2012/09/03 19:14:10 idl0r Exp $
+
+*mk-livestatus-1.2.0_p2 (03 Sep 2012)
+
+  03 Sep 2012; Christian Ruppert <idl0r@gentoo.org>
+  +mk-livestatus-1.2.0_p2.ebuild:
+  Version bump
+
+  03 Sep 2012; Christian Ruppert <idl0r@gentoo.org>
+  mk-livestatus-1.1.10_p1.ebuild, +files/gcc-4.7-compile.patch:
+  Add missing includes patch, fixes bug 425182 and bug 433800
 
 *mk-livestatus-1.1.10_p1 (27 Apr 2011)
 
